--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -3,6 +3,15 @@
 
     <string name="app_name">MinerCon</string>
     <string name="action_settings">Settings</string>
-	<string name="add_server">Add a server</string>
-    
+    <string name="add_server">Add a server</string>
+    <string name="title_activity_add_server">Add a Minecraft Server</string>
+    <string name="hello_world">Hello world!</string>
+    <string name="add_server_server_name_hint">Maka\'s Server</string>
+    <string name="add_server_server_host_hint">play.makacraft.com</string>
+    <string name="add_server_port_hint">25575</string>
+    <string name="add_server_password_hint">mypasswordisgood</string>
+    <string name="add_server_add_button">Let\'s go!</string>
+    <string name="add_server_port_default">25575</string>
+    <string name="action_delete_storage">Debug: Delete server storage</string>
+
 </resources>
