Added basic template for manage activity, changed add server to use an action button instead of a big button

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -13,5 +13,10 @@
     <string name="add_server_add_button">Let\'s go!</string>
     <string name="add_server_port_default">25575</string>
     <string name="action_delete_storage">Debug: Delete server storage</string>
+    <string name="title_activity_server_manage">Manage Server</string>
+    <string name="title_section1">Section 1</string>
+    <string name="title_section2">Section 2</string>
+    <string name="title_section3">Section 3</string>
+    <string name="add_server_confirm_text">Add server</string>
 
 </resources>
