--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -15,10 +15,12 @@
     <string name="action_delete_storage">Debug: Delete server storage</string>
     <string name="title_activity_server_manage">Manage Server</string>
     <string name="manage_server_players">Players</string>
-    <string name="manage_server_properties">Server Properties</string>
+    <string name="manage_server_properties">Game Rules</string>
     <string name="manage_server_console">Console</string>
     <string name="add_server_confirm_text">Add server</string>
     <string name="title_activity_manage_server">Manage Server</string>
     <string name="add_server_cancel">Cancel</string>
+    <string name="player_list_no_players">No players online.</string>
+    <string name="refresh">Refresh</string>
 
 </resources>
